# RayApp

./: .clang-format  .gitignore  CMakeLists.txt
App/: CMakeLists.txt
App/include/: App.hpp
App/src/: App.cpp  main.cpp
RayApp/: CMakeLists.txt
RayApp/include/: RayApp.hpp
RayApp/src/: RayApp.cpp
